--- a/CompanionApp/installer-app/build.gradle
+++ b/CompanionApp/installer-app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 android {
+
     namespace 'com.dcoxii.apkinstaller'
     compileSdk 34
 
@@ -11,22 +12,36 @@ android {
         applicationId "com.dcoxii.apkinstaller"
         minSdk 24
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
 
-        // Request install APK permission
+        // --- AUTO VERSIONING BASED ON GIT TAG ---
+        def tag = "git describe --tags --abbrev=0".execute(null, project.rootDir).text.trim()
+        def version = tag.startsWith("v") ? tag.substring(1) : tag
+
+        versionName version
+
+        def (major, minor, patch) = version.tokenize('.') // ex: "1.4.2"
+        versionCode = (major.toInteger() * 10000) + (minor.toInteger() * 100) + patch.toInteger()
+
         manifestPlaceholders = [
                 appAuth: "com.dcoxii.apkinstaller.provider"
         ]
+
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
+
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
         }
-        debug {}
+
+        debug {
+            minifyEnabled false
+            shrinkResources false
+        }
     }
 
     buildFeatures {
@@ -34,11 +49,11 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.11'
+        kotlinCompilerExtensionVersion = "1.5.12"
     }
 
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
 
     packaging {
@@ -47,15 +62,23 @@ android {
 }
 
 dependencies {
+
+    // -------- Jetpack Compose BOM --------
     implementation platform("androidx.compose:compose-bom:2024.02.00")
     implementation "androidx.compose.material3:material3"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.activity:activity-compose:1.8.2"
+    implementation "androidx.activity:activity-compose:1.9.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
     implementation "androidx.core:core-ktx:1.13.1"
+
+    // -------- QR Scanner (ADB pairing) -------
     implementation "com.journeyapps:zxing-android-embedded:4.3.0"
-    
+
+    // -------- Networking (UpdateWorker GitHub OTA updater) --------
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
+
+    // Debug UI
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
 }
